# handsfree2048

./: README.md  about.txt  local.properties
app/: build.gradle
app/app/src/main/cpp/dlib/: model_utils.h
app/app/src/main/cpp/dlib/image_processing/: shape_predictor.h
app/app/src/main/res/drawable/: box0.xml  box32.xml
app/app/src/main/res/layout/: activity_eye.xml  activity_start.xml
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_uitest_EyeActivity.h  com_example_uitest_RunActivity.h  native-lib.cpp  run.cpp
app/src/main/cpp/dlib/: huffman.h
app/src/main/java/com/example/uitest/: BackUpActivity.java  Database.java  EyeActivity.java  EyeDatabase.java  MainActivity.java  Orientation.java  RunActivity.java  ShowTemplates.java  StartActivity.java  TiltActivity.java  TiltDatabase.java
app/src/main/res/drawable/: back.xml  box0.xml  box1024.xml  box128.xml  box16.xml  box2.xml  box2048.xml  box256.xml  box4.xml  box512.xml  box64.xml  box8.xml  boxscores.xml  newgame.xml
app/src/main/res/layout/: activity_eye.xml  activity_main.xml  activity_run.xml  activity_show_templates.xml  activity_start.xml  activity_tilt.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
